--- a/CombatRPG.html
+++ b/CombatRPG.html
@@ -37,7 +37,7 @@
           </div>
         </div>
       </div>
-      <div class="Space"></div>
+      <div class="Space"><p>    </p></div>
       <div class="Characters">
         <div class="BloodMage" id="Hero">
           <p>Attack</p><p>Defense (2 PM)</p><p>Spell (5 PM)</p>
