--- a/CombatRPG.html
+++ b/CombatRPG.html
@@ -29,20 +29,11 @@
           <div class="PictureMonster3" id="PMonster">
           </div>
         </div>
-        <div class="Monster4" id="Monster">
-          <div class="DetailsMonster4" id="Bubble">
-            <p>Spider</p><p>HP : 90</p>
-          </div>
-          <div class="PictureMonster4" id="PMonster">
-          </div>
-        </div>
       </div>
-      <div class="Space"><p>    </p></div>
+      <div class="Space"><p>    </p>
+      </div>
       <div class="Characters">
         <div class="BloodMage" id="Hero">
-          <p>Attack</p><p>Defense (2 PM)</p><p>Spell (5 PM)</p>
-        </div>
-        <div class="Thief" id="Hero">
           <p>Attack</p><p>Defense (2 PM)</p><p>Spell (5 PM)</p>
         </div>
         <div class="Alchemist" id="Hero">
