--- a/CombatRPG.html
+++ b/CombatRPG.html
@@ -9,24 +9,26 @@
       <div class="MonsterPlacement">
         <div class="Monster1" id="Monster">
           <div class="DetailsMonster1" id="Bubble">
-            <p>Slime</p><p>HP : 100</p>
+            <p>Beast</p><p>HP : 100</p>
           </div>
           <div class="PictureMonster1" id="PMonster">
-            <img src="https://www.clipartmax.com/png/middle/162-1626618_pixel-zombies-animation-pixel-wars-game-monster-png.png" class="Golem">
+            <img src="Monster1.png" width="300" height="300">
           </div>
         </div>
         <div class="Monster2" id="Monster">
           <div class="DetailsMonster2" id="Bubble">
-            <p>Boar</p><p>HP : 160</p>
+            <p>Skull</p><p>HP : 160</p>
           </div>
           <div class="PictureMonster2" id="PMonster">
+            <img src="Monster2.png" width="250" height="250">
           </div>
         </div>
         <div class="Monster3" id="Monster">
           <div class="DetailsMonster3" id="Bubble">
-            <p>Skeleton</p><p>HP : 110</p>
+            <p>Beast</p><p>HP : 110</p>
           </div>
           <div class="PictureMonster3" id="PMonster">
+            <img src="Monster1.png" width="300" height="300">
           </div>
         </div>
       </div>
@@ -40,9 +42,11 @@
           <p>Attack</p><p>Defense (2 PM)</p><p>Spell (5 PM)</p>
         </div>
         <div class="Paladin" id="Hero">
-          <p>Attack</p><p>Defense (2 PM)</p><p>Spell (5 PM)</p>
+          <button>Attack</button><button>Defense (2 PM)</button><button>Spell (5 PM)</button>
         </div>
       </div>
     </div>
+
+    <script type="text/javascript" href="Script.js"></script>
   </body>
 </html>
