--- a/CombatRPG.html
+++ b/CombatRPG.html
@@ -8,15 +8,15 @@
     <div class="Background">
       <div class="MonsterPlacement">
         <div class="Monster1" id="Monster">
-          <div class="DetailsMonster1" id="Bubble">
+          <div class="DetailsMonster1" id="Bubble"style="display:none">
             <p>Beast</p><p>HP : 100</p>
           </div>
           <div class="PictureMonster1" id="PMonster">
-            <img src="Monster1.png" width="250" height="250">
+            <img src="Monster1.png" width="300" height="250">
           </div>
         </div>
         <div class="Monster2" id="Monster">
-          <div class="DetailsMonster2" id="Bubble">
+          <div class="DetailsMonster2" id="Bubble" style="display:none">
             <p>Skull</p><p>HP : 150</p>
           </div>
           <div class="PictureMonster2" id="PMonster">
@@ -24,11 +24,11 @@
           </div>
         </div>
         <div class="Monster3" id="Monster">
-          <div class="DetailsMonster3" id="Bubble">
+          <div class="DetailsMonster3" id="Bubble"style="display:none">
             <p>Beast</p><p>HP :100</p>
           </div>
           <div class="PictureMonster3" id="PMonster">
-            <img src="Monster1.png" width="250" height="250">
+            <img src="Monster1.png" width="300" height="250">
           </div>
         </div>
       </div>
@@ -47,6 +47,6 @@
       </div>
     </div>
 
-    <script type="text/javascript" href="Script.js"></script>
+    <script src="Script.js"></script>
   </body>
 </html>
