--- a/CombatRPG.html
+++ b/CombatRPG.html
@@ -8,7 +8,7 @@
     <div class="Background">
       <div class="MonsterPlacement">
         <div class="Monster1" id="Monster">
-          <div onmouseout ="disappearance(this)"; onmouseover ="hover(this)";class="DetailsMonster1" id="Bubble" >
+          <div class="DetailsMonster1" id="Bubble" >
             <p>Beast</p><p>HP : 100</p>
           </div>
           <div class="PictureMonster1" id="PMonster">
@@ -16,7 +16,7 @@
           </div>
         </div>
         <div class="Monster2" id="Monster">
-          <div onmouseout ="disappearance(this)"; onmouseover ="hover(this)"; class="DetailsMonster2" id="Bubble">
+          <div class="DetailsMonster2" id="Bubble">
             <p>Skull</p><p>HP : 150</p>
           </div>
           <div class="PictureMonster2" id="PMonster">
@@ -24,7 +24,7 @@
           </div>
         </div>
         <div class="Monster3" id="Monster">
-          <div onmouseout ="disappearance(this)"; onmouseover ="hover(this)"; class="DetailsMonster3" id="Bubble">
+          <div class="DetailsMonster3" id="Bubble">
             <p>Beast</p><p>HP :100</p>
           </div>
           <div class="PictureMonster3" id="PMonster">
