--- a/CombatRPG.html
+++ b/CombatRPG.html
@@ -8,26 +8,26 @@
     <div class="Background">
       <div class="MonsterPlacement">
         <div class="Monster1" id="Monster">
-          <div class="DetailsMonster1" id="Bubble" >
+          <div class="DetailsMonster" id="Bubble1" >
             <p>Beast</p><p>HP : 100</p>
           </div>
-          <div class="PictureMonster1" id="PMonster">
+          <div class="PictureMonster" id="PMonster1">
             <img src="Monster1.png" width="300" height="250">
           </div>
         </div>
         <div class="Monster2" id="Monster">
-          <div class="DetailsMonster2" id="Bubble">
+          <div class="DetailsMonster" id="Bubble2">
             <p>Skull</p><p>HP : 150</p>
           </div>
-          <div class="PictureMonster2" id="PMonster">
+          <div class="PictureMonster" id="PMonster2">
             <img src="Monster2.png" width="250" height="250">
           </div>
         </div>
         <div class="Monster3" id="Monster">
-          <div class="DetailsMonster3" id="Bubble">
+          <div class="DetailsMonster" id="Bubble3">
             <p>Beast</p><p>HP :100</p>
           </div>
-          <div class="PictureMonster3" id="PMonster">
+          <div class="PictureMonster" id="PMonster3">
             <img src="Monster1.png" width="300" height="250">
           </div>
         </div>
