--- a/CombatRPG.html
+++ b/CombatRPG.html
@@ -36,13 +36,28 @@
       </div>
       <div class="Characters">
         <div class="BloodMage" id="Hero">
-          <p>Attack</p><p>Defense (2 PM)</p><p>Spell (5 PM)</p>
+          <div class ="Name">
+            <p>Blood Mage</p>
+          </div>
+          <div class="Action" id="ActionBloodMage">
+          <button class="AttackBloodMage">Attack</button><button class="DefenceBloodMage">Defense (20 PM)</button><button class="SpellBloodMage">Spell (30 PM)</button>
+          </div>
         </div>
         <div class="Alchemist" id="Hero">
-          <p>Attack</p><p>Defense (2 PM)</p><p>Spell (5 PM)</p>
+           <div class ="Name">
+            <p>Alchemist</p>
+          </div>
+          <div class="Action" id="ActionBloodMage">
+          <button class="AttackAlchemist">Attack</button><button class="DefenceAlchemist">Defense (20 PM)</button><button class="SpellAlchemist">Spell (20 PM)</button>
+          </div>
         </div>
         <div class="Paladin" id="Hero">
-          <button>Attack</button><button>Defense (2 PM)</button><button>Spell (5 PM)</button>
+          <div class ="Name">
+            <p>Paladin</p>
+          </div>
+          <div class="Action" id="ActionPaladin">
+          <button class="AttackPaladin">Attack</button><button class="DefencePaladin">Defense (10 PM)</button><button class="SpellBPaladin">Spell (20 PM)</button>
+          </div>
         </div>
       </div>
     </div>
