--- a/CombatRPG.html
+++ b/CombatRPG.html
@@ -9,7 +9,9 @@
       <div class="MonsterPlacement">
         <div class="Monster1" id="Monster">
           <div class="DetailsMonster" id="Bubble1" >
-            <p>Beast</p><p>HP : 100</p>
+            <p>Beast</p>
+            <div class ="PV_Monster" id="PV_Monster1">
+            </div>
           </div>
           <div class="PictureMonster" id="PMonster1">
             <img src="Monster1.png" width="300" height="250">
@@ -17,7 +19,9 @@
         </div>
         <div class="Monster2" id="Monster">
           <div class="DetailsMonster" id="Bubble2">
-            <p>Skull</p><p>HP : 150</p>
+            <p>Skull</p>
+            <div class ="PV_Monster" id="PV_Monster2">
+            </div>
           </div>
           <div class="PictureMonster" id="PMonster2">
             <img src="Monster2.png" width="250" height="250">
@@ -25,7 +29,9 @@
         </div>
         <div class="Monster3" id="Monster">
           <div class="DetailsMonster" id="Bubble3">
-            <p>Beast</p><p>HP :100</p>
+            <p>Beast</p>
+            <div class ="PV_Monster" id="PV_Monster3">
+            </div>
           </div>
           <div class="PictureMonster" id="PMonster3">
             <img src="Monster1.png" width="300" height="250">
@@ -40,7 +46,9 @@
             <p>Blood Mage</p>
           </div>
           <div class="Action" id="ActionBloodMage">
-          <button class="AttackBloodMage">Attack</button><button class="DefenceBloodMage">Defense (20 PM)</button><button class="SpellBloodMage">Spell (30 PM)</button>
+          <button id="AttackBloodMage">Attack</button>
+          <button id="DefenceBloodMage">Defense (20 PM)</button>
+          <button id="SpellBloodMage">Spell (30 PM)</button>
           </div>
         </div>
         <div class="Alchemist" id="Hero">
@@ -48,7 +56,9 @@
             <p>Alchemist</p>
           </div>
           <div class="Action" id="ActionBloodMage">
-          <button class="AttackAlchemist">Attack</button><button class="DefenceAlchemist">Defense (20 PM)</button><button class="SpellAlchemist">Spell (20 PM)</button>
+          <button id="AttackAlchemist">Attack</button>
+          <button id="DefenceAlchemist">Defense (20 PM)</button>
+          <button id="SpellAlchemist">Spell (20 PM)</button>
           </div>
         </div>
         <div class="Paladin" id="Hero">
@@ -56,7 +66,9 @@
             <p>Paladin</p>
           </div>
           <div class="Action" id="ActionPaladin">
-          <button class="AttackPaladin">Attack</button><button class="DefencePaladin">Defense (10 PM)</button><button class="SpellBPaladin">Spell (20 PM)</button>
+          <button id="AttackPaladin">Attack</button>
+          <button id="DefencePaladin">Defense (10 PM)</button>
+          <button id="SpellBPaladin">Spell (20 PM)</button>
           </div>
         </div>
       </div>
