--- a/CombatRPG.html
+++ b/CombatRPG.html
@@ -5,14 +5,14 @@
     <link rel="stylesheet" type="text/css" href="CombatStyleHTML.css">
   </head>
   <body> 
-    
+
     <div class="Background">
 
       <div class="MonsterPlacement">
 
         <div class="Monster1" id="Monster">
           <div class="DetailsMonster" id="Bubble1" >
-            <p>Beast</p>
+            <p>Beast , PV :</p>
             <div class ="PV_Monster" id="PV_Monster1">
             </div>
           </div>
@@ -23,7 +23,7 @@
 
         <div class="Monster2" id="Monster">
           <div class="DetailsMonster" id="Bubble2">
-            <p>Skull</p>
+            <p>Skull , PV :</p>
             <div class ="PV_Monster" id="PV_Monster2">
             </div>
           </div>
@@ -34,7 +34,7 @@
 
         <div class="Monster3" id="Monster">
           <div class="DetailsMonster" id="Bubble3">
-            <p>Beast</p>
+            <p>Beast , PV :</p>
             <div class ="PV_Monster" id="PV_Monster3">
             </div>
           </div>
@@ -44,7 +44,16 @@
         </div>
       </div>
 
-      <div class="Space"><p>    </p>
+      <div class="Target">
+        <div class="Target_Monster" id="Target_Monster1">
+          <p> Monster 1</p>
+        </div>
+        <div class="Target_Monster" id="Target_Monster2">
+          <p> Monster 2</p>
+        </div>
+        <div class="Target_Monster" id="Target_Monster3">
+          <p> Monster 3</p>
+        </div>
       </div>
 
       <div class="Characters">
@@ -68,6 +77,17 @@
           <button id="AttackAlchemist">Attack</button>
           <button id="DefenceAlchemist">Defense (20 PM)</button>
           <button id="SpellAlchemist">Spell (20 PM)</button>
+          </div>
+        </div>
+
+        <div class="Depressive" id="Hero">
+          <div class ="Name">
+            <p>Depressive</p>
+          </div>
+          <div class="Action" id="ActionDepressive">
+          <button id="AttackDepressive">Attack</button>
+          <button id="DefenceDepressive">Defense (10 PM)</button>
+          <button id="SpellDepressive">Spell (80 PM)</button>
           </div>
         </div>
 
