--- a/CombatRPG.html
+++ b/CombatRPG.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="CombatStyleHTML.css">
   </head>
-  <body> 
-
+  <body background="Background.jpg" width = "100"> 
+    <div >
     <div class="Background">
 
       <div class="MonsterPlacement">
