--- a/CombatRPG.html
+++ b/CombatRPG.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="CombatStyleHTML.css">
   </head>
-  <body background="Background.jpg" width = "100"> 
-    <div >
+  <body background="Background.jpg"> 
     <div class="Background">
 
       <div class="MonsterPlacement">
@@ -58,7 +57,7 @@
 
       <div class="Characters">
 
-        <div class="BloodMage" id="Hero">
+        <div class="BloodMage" id="Hero1">
           <div class ="Name">
             <p>Blood Mage</p>
           </div>
@@ -69,7 +68,7 @@
           </div>
         </div>
 
-        <div class="Alchemist" id="Hero">
+        <div class="Alchemist" id="Hero2">
            <div class ="Name">
             <p>Alchemist</p>
           </div>
@@ -80,7 +79,7 @@
           </div>
         </div>
 
-        <div class="Depressive" id="Hero">
+        <div class="Depressive" id="Hero3">
           <div class ="Name">
             <p>Depressive</p>
           </div>
@@ -91,7 +90,7 @@
           </div>
         </div>
 
-        <div class="Paladin" id="Hero">
+        <div class="Paladin" id="Hero4">
           <div class ="Name">
             <p>Paladin</p>
           </div>
